5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1637_2704.log
== TEST (2019-04-06 18:11:53) 
-- CODE:
nota = float(input("insira a nota: "))

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 18:12:01) 
-- CODE:
nota = float(input("insira a nota: "))

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- EXECUTION TIME:
0.166043
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.0
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:13:18) 
-- CODE:
nota = float(input("insira a nota: "))

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
	mensagem = "S"
else:
	mensagem = nota
	mensagem ="N"
	
print(mensagem)
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:13:30) 
-- CODE:
nota = float(input("insira a nota: "))

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
	mensagem = "S"
else:
	mensagem = nota
	mensagem = "N"
	
print(mensagem)
-- OUTPUT:
N
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:21:26) 
-- CODE:
nota = float(input("insira a nota: "))
opcao = input("vai receber bonificação? (S/N)")

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:21:47) 
-- CODE:
nota = float(input("insira a nota: "))
opcao = input("vai receber bonificacao? (S/N)")

if ( nota>= 6):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:22:30) 
-- CODE:
nota = float(input("insira a nota: "))
opcao = input("vai receber bonificacao? (S/N)")

if ( opcao.upper() == S):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if ( opcao.upper() == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 18:23:24) 
-- CODE:
nota = float(input("insira a nota: "))
opcao = input("vai receber bonificacao? (S/N)")

if ( opcao.upper() == "S"):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 18:23:34) 
-- CODE:
nota = float(input("insira a nota: "))
opcao = input("vai receber bonificacao? (S/N)")

if ( opcao.upper() == "S"):
	mensagem = nota + (nota * 10/100)
else:
	mensagem = nota
	
print(mensagem)
-- EXECUTION TIME:
0.113708
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
